# wscore

./: .gitignore  CMakeLists.txt  README.md  doxygen.conf  index.html  params.json  ws.tags
cmake/: FindFam.cmake  FindJsoncpp.cmake  FindMnoGoSearch.cmake  FindZlib.cmake  FindZmq.cmake  Find_wscore.cmake  WtFindBoost-cmake  install_libs.cmake  install_resources.cmake
config/: indexer.conf  wittyshare-global.json  wittyshare-layout.json  wittyshare-plugins.json
doc/: Brief.txt  Bugs.txt  FileSystemTree.txt  FsDaemon.txt  Fsclient.txt  Running_tests.txt  Search.txt  SortNumber.txt  TODO.txt  WsModSearch.txt  content_element_configuration.txt  i18n.txt  install.txt  jsexample  ldap.txt  menuBar.txt  menuTree_doc.txt  mnogosearch_readme.txt  modules.txt  node_doc.txt  notes.txt  overview.txt  run.sh  shm.txt
doc/install_files/: install_jsoncpp.txt  install_libarchive.sh  install_zmq.txt
doc/slides/architecture/: architecture.tex
doc/uptodate/: Architecture.dox  main.dox
resources/wittyshare/Transl/: WsDirectoryView.xml  WsSearchView.xml  WsSiteMapView.xml  wittyshare.xml
resources/wittyshare/dev_site/: WsModTest.tpl  bottomBanner.fhtml  index.html  index.tpl
scripts/: dupJpeg2url.sh  indent.sh  index.sh  openhttptunnel.sh  refactor.sh  rename.sh  tests.sh
scripts/startstop/: startfsdaemon.sh  startwittyshare.sh  stopfsdaemon.sh  stopwittyshare.sh  wittyshare.monitrc
src/Auth/: WsAbstractAuth.cpp  WsAbstractAuth.h  WsAuthenticator.cpp  WsAuthenticator.h
src/Compression/: WsCompressor.cpp  WsCompressor.h  WsDecompressor.cpp  WsDecompressor.h
src/ConfigManager/: WsAbstractProperties.cpp  WsAbstractProperties.h  WsGlobalProperties.cpp  WsGlobalProperties.h  WsLayoutProperties.cpp  WsLayoutProperties.h  WsNodeProperties.cpp  WsNodeProperties.h  WsNodeResources.cpp  WsNodeResources.h
src/DirCrawler/: WsDirectoryCrawler.cpp  WsDirectoryCrawler.h
src/FhtmlEditor/: CMakeLists.txt
src/FhtmlEditor/gdetc/: fhtmlEditor_config.xml
src/FhtmlEditor/src/: main.cpp
src/FileSystemTree/: WsAbstractNode.cpp  WsAbstractNode.h  WsDirNode.cpp  WsDirNode.h  WsFileNode.cpp  WsFileNode.h  WsFileSystemTree.cpp  WsFileSystemTree.h  WsNode.cpp  WsNode.h
src/FsClient/: WsAbstractFsClient.cpp  WsAbstractFsClient.h  WsFsDaemonClient.cpp  WsFsDaemonClient.h  WsFsTreeClient.cpp  WsFsTreeClient.h
src/FsDaemon/: CMakeLists.txt  WsFsDaemon.cpp  WsFsDaemon.h  WsFsDaemonLoader.cpp  WsFsDaemonLoader.h  WsUserSession.cpp  WsUserSession.h
src/FsTreeOp/: WsFsTreeConsultation.cpp  WsFsTreeConsultation.h  WsFsTreeModification.cpp  WsFsTreeModification.h  WsFsTreeOperations.cpp  WsFsTreeOperations.h
src/Include/: WsGlobalConfig.h  WsRequestType.h
src/Logger/: WsCrashLogger.cpp  WsCrashLogger.h  WsLogWriter.cpp  WsLogWriter.h  WsLogger.cpp  WsLogger.h
src/Main/: WsApplication.cpp  WsApplication.h  WsBottomBanner.cpp  WsBottomBanner.h  WsContent.cpp  WsContent.h  WsContentButtonsBar.cpp  WsContentButtonsBar.h  WsFileResource.cpp  WsFileResource.h  WsFormConfig.cpp  WsFormConfig.h  WsFunctionnalities.cpp  WsFunctionnalities.h  WsLogo.cpp  WsLogo.h  WsModulesLoader.cpp  WsModulesLoader.h  WsSearchObject.cpp  WsSearchObject.h  WsSearchView.cpp  WsSearchView.h  WsSiteMap.cpp  WsSiteMap.h  WsSiteMapView.cpp  WsSiteMapView.cpp.old  WsSiteMapView.h  WsTemplate.cpp  WsTemplate.h  WsTopBanner.cpp  WsTopBanner.h  main.cpp
src/Search/: WsAbstractSearch.cpp  WsAbstractSearch.h  WsResultItem.cpp  WsResultItem.h  WsSearch.cpp  WsSearch.h
src/Serializer/: WsArrayDeserializer.cpp  WsArrayDeserializer.h  WsArraySerializer.cpp  WsArraySerializer.h  WsTreeDeserializer.cpp  WsTreeDeserializer.h  WsTreeSerializer.cpp  WsTreeSerializer.h
src/Tree/: WsAbstractTree.cpp  WsAbstractTree.h  WsAccessTree.cpp  WsAccessTree.h  WsMenuTree.cpp  WsMenuTree.h
src/TreeTraversal/: WsTreeTraversal.cpp  WsTreeTraversal.h
src/Updater/: WsAbstractMonitor.cpp  WsAbstractMonitor.h  WsFsTreeUpdater.cpp  WsFsTreeUpdater.h  WsMonitor.cpp  WsMonitor.h
src/User/: WsUser.cpp  WsUser.h
src/Utils/: WsUtils.cpp  WsUtils.h
src/WsAuthModules/: CMakeLists.txt
src/WsAuthModules/BasicAuth/: CMakeLists.txt
src/WsAuthModules/Ldap/: CMakeLists.txt
src/WsAuthModules/LdapAuth/: CMakeLists.txt
src/WsModule/: CMakeLists.txt
src/WsModule/cmake/: Find_wsmodule.cmake  WsModuleInclude.cmake
src/WsModule/src/: WsModule.cpp  WsModule.h
src/WsModules/: CMakeLists.txt  README
src/WsModules/WsModAnchor/: CMakeLists.txt
src/WsModules/WsModBanners/: CMakeLists.txt
src/WsModules/WsModBreadCrumb/: CMakeLists.txt
src/WsModules/WsModDirectoryView2/: CMakeLists.txt
src/WsModules/WsModEditor/: CMakeLists.txt
src/WsModules/WsModFileUpload/: CMakeLists.txt
src/WsModules/WsModFollowUs/: CMakeLists.txt
src/WsModules/WsModGalleria/: CMakeLists.txt
src/WsModules/WsModImages2/: CMakeLists.txt
src/WsSearchModules/: CMakeLists.txt
tests/: casperTest.js
tests/Casper/: casperTest.js  pid.pid  run.sh
tests/Compress/: CMakeLists.txt  FindZlib.cmake  main.cpp
tests/DirCrawler/: CMakeLists.txt  DirectoryCrawlerTests.cpp  DirectoryCrawlerTests.h  main.cpp
tests/FileSystemTree/: CMakeLists.txt  FileSystemTreeTest.cpp  FileSystemTreeTest.h  main.cpp
tests/FsDaemon/: CMakeLists.txt  main.cpp
tests/FsTree/: CMakeLists.txt  directories2  main.cpp
tests/Logger/: CMakeLists.txt  TestLogger.cpp
tests/MenuTree/: CMakeLists.txt  MenuTreeTest.cpp  MenuTreeTest.h  main.cpp
tests/Search/: CMakeLists.txt  README  indexer.conf  main.cpp  prepare.sh
tests/TreeTraversal/: CMakeLists.txt  TreeTraversalTest.cpp  TreeTraversalTest.h  main.cpp
tests/User/: CMakeLists.txt  UserTest.cpp  UserTest.h  directories  main.cpp  prepare.sh
tests/testdir2/.config/: f1.json  (+2 more)
utils/: CMakeLists.txt  WsAccessTreeDisplayer.cpp  WsAccessTreeDisplayer.h
ws_install/: install.sh
ws_install/scripts/: build-gdcore.sh  build-gdwtcore.sh  build-wittyshare.sh
wt_install/: install.sh
wt_install/etc/: etc_apache2_conf.d_witty  etc_init.d_wtrun
wt_install/include/: base.inc
wt_install/scripts/: build-koen-haru.sh  build-tinymce.sh  build-wt.sh
(+1055 files in other folders)
